feat(arena): added add car and replace car routes
